--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^11.1.2",
+    "@react-native-firebase/auth": "^11.1.2",
     "@react-native-masked-view/masked-view": "^0.2.2",
     "@react-navigation/native": "^6.0.0-next.1",
     "@react-navigation/stack": "^6.0.0-next.6",
     "babel-plugin-module-resolver": "^4.1.0",
+    "firebase": "^8.3.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
